# ComfyUI-QuickSize

./: MANIFEST.in  README.md  __init__.py  pyproject.toml
src/quicksize/: __init__.py  flux_quicksize.py  quickcrop_node.py  qwen_quicksize.py  sd15_quicksize.py  sdxl_quicksize.py  wan_quicksize.py
src/web/: quickcrop.js
src/web/docs/: Quick Size (Flux).md
