[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-QuickSize"
version = "0.0.1"
description = "ComfyUI nodes with easy size/resolution options for image generation."
authors = [
  { name = "rh6423" }
]
readme = "README.md"
license = { text = "GPL 3.0 License" }
requires-python = ">=3.10"
classifiers = []
dependencies = []

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.urls]
Repository = "https://github.com/rh6423/ComfyUI-QuickSize"
BugTracker = "https://github.com/rh6423/ComfyUI-QuickSize/issues"
Documentation = "https://github.com/rh6423/ComfyUI-QuickSize/wiki"

[tool.comfy]
PublisherId = "rh6423"
DisplayName = "QuickSize for ComfyUI"
Repository = "https://github.com/rh6423/ComfyUI-QuickSize"
Icon = "QuicksizeLogo.png"     
Tags = []

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

